--- a/index.html
+++ b/index.html
@@ -4,31 +4,171 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 
-<body>
+<body class="body">
   <div class="page">
     <header class="header">
-      prive
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <div class="header__subtitle">Какие современные и эффективные подходы
+        к обучению вы можете использовать в своей жизни?
+        <a class="header__link" href="#">Узнать &#8594;</a>
+      </div>
+      <div class="header__main-illustration"></div>
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="description__two-colums">
+          <h2 class="two-colums__brief">Главные проблемы в обучении</h2>
+          <div class="two-colums__main-text">
+            <p class="two-column__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и
+              учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
+              дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <span class="two-colums__span-accent"> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с
+              этим
+              делать?</span>
+            <p class="two-column__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+              сделать его эффективным и
+              захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <div class="table">
+          <div class="table__cell">
+            <div class="table__heading">86 миллиардов</div>
+            <div class="table__text">Число нейронов в мозге человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">2.1 миллиарда</div>
+            <div class="table__text">Число нуждающихся в повышении квалификации
+              Всемирный Банк, 2017</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1000 терабайт</div>
+            <div class="table__text">Объём памяти человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">500 триллионов</div>
+            <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">420 миллионов</div>
+            <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
+              <div class="table__text">Всемирный Банк, 2017</div>
+            </div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">17–20 лет</div>
+            <div class="table__text">Пик обучаемости</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1885 год</div>
+            <div class="table__text">Открытие кривой забывания</div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">1889 год</div>
+            <div class="table__text">Открытие условного рефлекса</div>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
+        <div class="feynman__content">
+          <h2 class="freynman__title">Метод Фейнмана</h2>
+          <h3 class="freynmann__subtitle">Выучить и не забыть.</h3>
+        </div>
+        <a class="freynman__link" href="#">Подробнее &#8594;</a>
       </section>
 
       <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">1</div>
+            <div class="table__text table__text_theme_dark">Выберите привлекательный проект.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">2</div>
+            <div class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">3</div>
+            <div class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">4</div>
+            <div class="table__text table__text_theme_dark">Разбейте навык на элементы.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">5</div>
+            <div class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">6</div>
+            <div class="table__text table__text_theme_dark">Устраните препятствия для занятий.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">7</div>
+            <div class="table__text table__text_theme_dark">Выделите специальное время для занятий.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">8</div>
+            <div class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">9</div>
+            <div class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
+              интервалами.</div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">10</div>
+            <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
+          </div>
+          <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="image">
+        </div>
       </section>
     </main>
     <footer class="footer">
+      <div class="footer_columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <div class="footer__author">&copy;2021 Сергей Веселов</div>
+        </div>
+        <div class="footer__column_content_info">
+          <div class="footer__column-heading">О Практикуме</div>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column_content_social">
+          <div class="footer__column-heading">Соцсети</div>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#"> <img class="footer__social-icon"
+                src="images/facebook_color_white.svg" alt="Фейсбук">Facebook</a>
+            <a class="footer__column-link" href="#"> <img class="footer__social-icon" src="images/vk_color_white.svg"
+                alt="ВКонтакте">ВКонтакте</a>
+            <a class="footer__column-link" href="#"> <img class="footer__social-icon"
+                src="images/instagram_color_white.svg" alt="Инстаграмм">Instagram</a>
+          </div>
+        </div>
+      </div>
 
     </footer>
   </div>
+
 </body>
 
 </html>
