--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="table__heading table__heading_theme_dark">10</div>
             <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
           </div>
-          <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="image">
+          <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="картинка">
         </div>
       </section>
     </main>
