--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать &rarr;</a>
       </p>
-      <img class="header__main-illustration" src="images/header-image.png" alt="">
+      <img class="header__main-illustration" src="images/header-image.png" alt="тут картинка">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -30,7 +30,7 @@
               материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph two-columns__paragraph_indent"><span class="two-columns__span-accent">Вывод
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод
                 :</span> учиться тоже нужно
               уметь, но почему-то этому мало где
               учат. Что с
