--- a/index.html
+++ b/index.html
@@ -80,10 +80,15 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__infames">
-          <div class="video__infame"></div>
-          <div class="video__infame"></div>
+          <div class="video__infame">
+            <iframe id="ytplayer" type="text/html" width="515" height="316"
+              src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="video__infame">
+            <iframe id="ytplayer" type="text/html" width="515" height="316"
+              src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+          </div>
         </div>
-
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
