--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
               добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
       </section>
+      <section class="feynman">
+        <h2 class="freynman__title">Метод Фейнмана</h2>
+        <p class="freynmann__subtitle">Выучить и не забыть.</p>
+        <a class="freynman__link" href="#">Подробнее &rarr;</a>
+      </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
@@ -141,13 +146,20 @@
           </div>
         </div>
       </section>
-
-      <section class="feynman">
-        <h2 class="freynman__title">Метод Фейнмана</h2>
-        <p class="freynmann__subtitle">Выучить и не забыть.</p>
-        <a class="freynman__link" href="#">Подробнее &rarr;</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. 
+            Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <div class="khan__book-pic"></div>
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
-
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
@@ -196,6 +208,9 @@
 
         </div>
         <div class="kaufman__triangle"></div>
+      </section>
+      <section class="resources">
+
       </section>
     </main>
     <footer class="footer">
