--- a/index.html
+++ b/index.html
@@ -207,9 +207,17 @@
           </div>
 
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="rotate kaufman__triangle"></div>
       </section>
       <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <img src="images_sprint-2/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
+          <img src="images_sprint-2/logo/resources-n1.svg" alt="Н1" class="resources__logo">
+          <img src="images_sprint-2/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
+          <img src="images_sprint-2/logo/resources-polka.svg" alt="Полка" class="resources__logo">
+        </div>
 
       </section>
     </main>
