--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы
         к обучению вы можете использовать в своей жизни?
-        <a class="header__link" href="#">Узнать &rarr;</a>
+        <a class="link_opacity header__link" href="#">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="images/header-image.png" alt="тут картинка">
       <div class="rotate header__rotate_square-pic"></div>
@@ -104,7 +104,7 @@
       <section class="feynman">
         <h2 class="freynman__title">Метод Фейнмана</h2>
         <p class="freynmann__subtitle">Выучить и не забыть.</p>
-        <a class="freynman__link" href="#">Подробнее &rarr;</a>
+        <a class="link_opacity freynman__link" href="#">Подробнее &rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -156,7 +156,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <div class="khan__book-pic"></div>
-            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+            <a href="#" class="link_opacity khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -230,19 +230,19 @@
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__column-links">
-            <a class="footer__column-link" href="#">Главная</a>
-            <a class="footer__column-link" href="#">Концепция</a>
-            <a class="footer__column-link" href="#">Наставники</a>
+            <a class="link_opacity footer__column-link" href="#">Главная</a>
+            <a class="link_opacity footer__column-link" href="#">Концепция</a>
+            <a class="link_opacity footer__column-link" href="#">Наставники</a>
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
-            <a class="footer__column-link" href="#"> <img class="footer__social-icon"
+            <a class="link_opacity footer__column-link" href="#"> <img class="footer__social-icon"
                 src="images/facebook_color_white.svg" alt="Фейсбук">Facebook</a>
-            <a class="footer__column-link" href="#"> <img class="footer__social-icon" src="images/vk_color_white.svg"
+            <a class="link_opacity footer__column-link" href="#"> <img class="footer__social-icon" src="images/vk_color_white.svg"
                 alt="ВКонтакте">ВКонтакте</a>
-            <a class="footer__column-link" href="#"> <img class="footer__social-icon"
+            <a class="link_opacity footer__column-link" href="#"> <img class="footer__social-icon"
                 src="images/instagram_color_white.svg" alt="Инстаграмм">Instagram</a>
           </nav>
         </div>
