--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <!-- <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css"> -->
+  <link rel="stylesheet" href="vendor/normalize.css">
+  <link rel="stylesheet" href="pages/index.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -102,9 +104,9 @@
           </div>
       </section>
       <section class="feynman">
-        <h2 class="freynman__title">Метод Фейнмана</h2>
-        <p class="freynmann__subtitle">Выучить и не забыть.</p>
-        <a class="link_opacity freynman__link" href="#">Подробнее &rarr;</a>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynmann__subtitle">Выучить и не забыть.</p>
+        <a class="link_opacity feynman__link" href="#">Подробнее &rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -149,9 +151,11 @@
       <section class="khan">
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
-          <h2 class="title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. 
-            Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру.
+            Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут
+            получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -240,8 +244,8 @@
           <nav class="footer__column-links">
             <a class="link_opacity footer__column-link" href="#"> <img class="footer__social-icon"
                 src="images/facebook_color_white.svg" alt="Фейсбук">Facebook</a>
-            <a class="link_opacity footer__column-link" href="#"> <img class="footer__social-icon" src="images/vk_color_white.svg"
-                alt="ВКонтакте">ВКонтакте</a>
+            <a class="link_opacity footer__column-link" href="#"> <img class="footer__social-icon"
+                src="images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a>
             <a class="link_opacity footer__column-link" href="#"> <img class="footer__social-icon"
                 src="images/instagram_color_white.svg" alt="Инстаграмм">Instagram</a>
           </nav>
