correction html BEM

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="link-opacity header__link" href="#">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="images/header-image.png" alt="тут картинка">
-      <div class="rotate header__rotate_square-pic"></div>
+      <div class="rotate header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -100,7 +100,7 @@
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynmann__subtitle">Выучить и не забыть.</p>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a class="link-opacity feynman__link" href="#">Подробнее &rarr;</a>
       </section>
       <section class="digits">
