--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
   <title>Научиться учиться</title>
 </head>
@@ -19,7 +18,7 @@
         <a class="link-opacity header__link" href="#">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="images/header-image.png" alt="тут картинка">
-      <div class="rotate header__square-pic"></div>
+      <div class="rotation header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -46,44 +45,42 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img src="images_sprint-2/cards-attention.png" alt="" class="cards__image">
+            <img src="images_sprint-2/cards-attention.png" alt="тут картинка" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
           </li>
           <li class="cards__item">
-            <img src="images_sprint-2/cards-recall.png" alt="" class="cards__image">
+            <img src="images_sprint-2/cards-recall.png" alt="тут картинка" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img src="images_sprint-2/cards-interliving.png" alt="" class="cards__image">
+            <img src="images_sprint-2/cards-interliving.png" alt="тут картинка" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img src="images_sprint-2/cards-question.png" alt="" class="cards__image">
+            <img src="images_sprint-2/cards-question.png" alt="тут картинка" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.</p>
           </li>
           <li class="cards__item">
-            <img src="images_sprint-2/cards-competence.png" alt="" class="cards__image">
+            <img src="images_sprint-2/cards-competence.png" alt="тут картинка" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
           </li>
-          <li class="cards__item"></li>
+
         </ul>
       </section>
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="video__infames">
-          <iframe class="video__infame"  width="515" height="316" 
-          src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-          <iframe class="video__infame" width="515" height="316"
-          src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -205,17 +202,21 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="rotate kaufman__triangle"></div>
+        <div class="rotation kaufman__triangle"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <img src="images_sprint-2/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
-          <img src="images_sprint-2/logo/resources-n1.svg" alt="Н1" class="resources__logo">
-          <img src="images_sprint-2/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
-          <img src="images_sprint-2/logo/resources-polka.svg" alt="Полка" class="resources__logo">
-        </div>
+        <nav class="resources__logo-zone">
+          <a href="#"><img src="images_sprint-2/logo/resources-arzamas.svg" alt="Арзамас"
+              class="resources__logo link-opacity "></a>
+          <a href="#"><img src="images_sprint-2/logo/resources-n1.svg" alt="Н1"
+              class="resources__logo link-opacity "></a>
+          <a href="#"><img src="images_sprint-2/logo/resources-strelka.svg" alt="Стрелка"
+              class="resources__logo link-opacity "></a>
+          <a href="#"><img src="images_sprint-2/logo/resources-polka.svg" alt="Полка"
+              class="resources__logo link-opacity "></a>
+        </nav>
 
       </section>
     </main>
