--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav class="resources__logo-zone">
+        <div class="resources__logo-zone">
           <a href="#"><img src="images_sprint-2/logo/resources-arzamas.svg" alt="Арзамас"
               class="resources__logo link-opacity "></a>
           <a href="#"><img src="images_sprint-2/logo/resources-n1.svg" alt="Н1"
@@ -216,7 +216,7 @@
               class="resources__logo link-opacity "></a>
           <a href="#"><img src="images_sprint-2/logo/resources-polka.svg" alt="Полка"
               class="resources__logo link-opacity "></a>
-        </nav>
+        </div>
 
       </section>
     </main>
